--- a/EldYoungAndroidApp/EldYoungAndroidApp.csproj
+++ b/EldYoungAndroidApp/EldYoungAndroidApp.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Activitys\My\AdviceActivity.cs" />
     <Compile Include="Param\UpdatePersonInfoParam.cs" />
     <Compile Include="Json\UpdatePersonInfoJson.cs" />
+    <Compile Include="AboutUsActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -367,6 +368,11 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\myInfomation_bgImage.png" />
     <AndroidResource Include="Resources\layout\AdviceLayout.axml" />
     <AndroidResource Include="Resources\drawable\callcustomphoneselector.xml" />
+    <AndroidResource Include="Resources\drawable\btn_red_selector.xml" />
+    <AndroidResource Include="Resources\drawable\btn_orange_selector.xml" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\myInfomation_headImage.png" />
+    <AndroidResource Include="Resources\layout\AboutUsLayout.axml" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\myInfomation_setup_aboutus_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
