--- a/EldYoungAndroidApp/Properties/AndroidManifest.xml
+++ b/EldYoungAndroidApp/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.1" package="com.eldyoung.lelaozuandroidapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="com.eldyoung.lelaozuandroidapp" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="22" />
 	<permission android:name="com.eldyoung.lelaozuandroidapp.permission.JPUSH_MESSAGE" android:protectionLevel="signature" />
 	<!-- Required  一些系统要求的权限，如访问网络等-->
@@ -32,8 +32,8 @@
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 	<uses-permission android:name="android.permission.BROADCAST_STICKY" />
-	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" /> 
-	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" /> 
+	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
 	<application android:label="@string/app_name" android:icon="@drawable/ic_launch" android:name="eldyoungandroidapp.common.EldYoungApplication">
 		<!-- Required SDK核心功能push activity -->
 		<activity android:name="cn.jpush.android.ui.PushActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:configChanges="orientation|keyboardHidden">
@@ -100,6 +100,6 @@
 		<!-- release版 AK -->
 		<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="uux82Hcm1GbEVnd98WBRiABg" />
 		<!--- debug版 AK -->
-<!--		<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="krKFPTG9UDtpGEKWT56oLcwe" />-->
+		<!--		<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="krKFPTG9UDtpGEKWT56oLcwe" />-->
 	</application>
 </manifest>
